Fix: Correct image paths from lowercase 'images/' to 'Images/' to match folder name

--- a/Products.html
+++ b/Products.html
@@ -26,49 +26,49 @@
     // Product data (example)
     const productData = {
         airpods: [
-            { name: "Button Pouch", price: "₹250", img: "images/airpods/1.jpg", color: "Red" },
-            { name: "Flower Pouch", price: "₹300", img: "images/airpods/2.jpg", color: "Blue" },
-            { name: "Strap Pouch", price: "₹250", img: "images/airpods/3.jpg", color: "Green" },
-            { name: "Pokemon Pouch", price: "₹350", img: "images/airpods/4.jpg", color: "Yellow" },
-            { name: "Sheep Pouch", price: "₹400", img: "images/airpods/5.jpg", color: "Pink" },
-            { name: "Catpaw Pouch", price: "₹500", img: "images/airpods/6.jpg", color: "Purple" },
-            { name: "Dogy Pouch", price: "₹500", img: "images/airpods/7.jpg", color: "White" },
+            { name: "Button Pouch", price: "₹250", img: "Images/airpods/1.jpg", color: "Red" },
+            { name: "Flower Pouch", price: "₹300", img: "Images/airpods/2.jpg", color: "Blue" },
+            { name: "Strap Pouch", price: "₹250", img: "Images/airpods/3.jpg", color: "Green" },
+            { name: "Pokemon Pouch", price: "₹350", img: "Images/airpods/4.jpg", color: "Yellow" },
+            { name: "Sheep Pouch", price: "₹400", img: "Images/airpods/5.jpg", color: "Pink" },
+            { name: "Catpaw Pouch", price: "₹500", img: "Images/airpods/6.jpg", color: "Purple" },
+            { name: "Dogy Pouch", price: "₹500", img: "Images/airpods/7.jpg", color: "White" },
         ],
         laptopbag: [
-            { name: "Laptop Bag 1", price: "₹500", img: "images/laptopbag/1.jpg", color: "Black" },
-            { name: "Laptop Bag 2", price: "₹500", img: "images/laptopbag/2.jpg", color: "Blue" },
-            { name: "Laptop Bag 3", price: "₹500", img: "images/laptopbag/3.jpg", color: "Grey" },
-            { name: "Laptop Bag 4", price: "₹500", img: "images/laptopbag/4.jpg", color: "Pink" },
-            { name: "Laptop Bag 5", price: "₹500", img: "images/laptopbag/5.jpg", color: "Purple" },
-            { name: "Laptop Bag 6", price: "₹500", img: "images/laptopbag/6.jpg", color: "White" },
-            { name: "Laptop Bag 7", price: "₹500", img: "images/laptopbag/7.jpg", color: "Red" },
+            { name: "Laptop Bag 1", price: "₹500", img: "Images/laptopbag/1.jpg", color: "Black" },
+            { name: "Laptop Bag 2", price: "₹500", img: "Images/laptopbag/2.jpg", color: "Blue" },
+            { name: "Laptop Bag 3", price: "₹500", img: "Images/laptopbag/3.jpg", color: "Grey" },
+            { name: "Laptop Bag 4", price: "₹500", img: "Images/laptopbag/4.jpg", color: "Pink" },
+            { name: "Laptop Bag 5", price: "₹500", img: "Images/laptopbag/5.jpg", color: "Purple" },
+            { name: "Laptop Bag 6", price: "₹500", img: "Images/laptopbag/6.jpg", color: "White" },
+            { name: "Laptop Bag 7", price: "₹500", img: "Images/laptopbag/7.jpg", color: "Red" },
         ],
         bookmark: [
-            { name: "Multiple Flowers", price: "₹500", img: "images/bookmark/1.jpg", color: "Black" },
-            { name: "Small charms", price: "₹500", img: "images/bookmark/2.jpg", color: "Blue" },
-            { name: "Sunflower", price: "₹500", img: "images/bookmark/3.jpg", color: "Grey" },
-            { name: "Triple Flowers", price: "₹500", img: "images/bookmark/4.jpg", color: "Pink" },
-            { name: "Flower Clip", price: "₹500", img: "images/bookmark/5.jpg", color: "Purple" },
-            { name: "Flower Bud", price: "₹500", img: "images/bookmark/6.jpg", color: "White" },
-            { name: "Poppy Flower", price: "₹500", img: "images/bookmark/7.jpg", color: "Red" },
+            { name: "Multiple Flowers", price: "₹500", img: "Images/bookmark/1.jpg", color: "Black" },
+            { name: "Small charms", price: "₹500", img: "Images/bookmark/2.jpg", color: "Blue" },
+            { name: "Sunflower", price: "₹500", img: "Images/bookmark/3.jpg", color: "Grey" },
+            { name: "Triple Flowers", price: "₹500", img: "Images/bookmark/4.jpg", color: "Pink" },
+            { name: "Flower Clip", price: "₹500", img: "Images/bookmark/5.jpg", color: "Purple" },
+            { name: "Flower Bud", price: "₹500", img: "Images/bookmark/6.jpg", color: "White" },
+            { name: "Poppy Flower", price: "₹500", img: "Images/bookmark/7.jpg", color: "Red" },
         ],
         keychain: [
-            { name: "Dress", price: "₹500", img: "images/keychain/1.jpg", color: "Black" },
-            { name: "Bow", price: "₹350", img: "images/keychain/2.jpg", color: "Blue" },
-            { name: "Cat Paw", price: "₹400", img: "images/keychain/3.jpg", color: "Grey" },
-            { name: "Heart", price: "₹500", img: "images/keychain/4.jpg", color: "Pink" },
-            { name: "Avacado", price: "₹350", img: "images/keychain/5.jpg", color: "Purple" },
-            { name: "Fish", price: "₹250", img: "images/keychain/6.jpg", color: "White" },
-            { name: "Flower", price: "₹250", img: "images/keychain/7.jpg", color: "Red" },
+            { name: "Dress", price: "₹500", img: "Images/keychain/1.jpg", color: "Black" },
+            { name: "Bow", price: "₹350", img: "Images/keychain/2.jpg", color: "Blue" },
+            { name: "Cat Paw", price: "₹400", img: "Images/keychain/3.jpg", color: "Grey" },
+            { name: "Heart", price: "₹500", img: "Images/keychain/4.jpg", color: "Pink" },
+            { name: "Avacado", price: "₹350", img: "Images/keychain/5.jpg", color: "Purple" },
+            { name: "Fish", price: "₹250", img: "Images/keychain/6.jpg", color: "White" },
+            { name: "Flower", price: "₹250", img: "Images/keychain/7.jpg", color: "Red" },
         ],
         bagcharm: [
-            { name: "Heart", price: "₹500", img: "images/bagcharm/1.jpg", color: "Black" },
-            { name: "Tedy", price: "₹500", img: "images/bagcharm/2.jpg", color: "Blue" },
-            { name: "Smiley", price: "₹500", img: "images/bagcharm/3.jpg", color: "Grey" },
-            { name: "Sunflower", price: "₹500", img: "images/bagcharm/4.jpg", color: "Pink" },
-            { name: "Evel Eye", price: "₹500", img: "images/bagcharm/5.jpg", color: "Purple" },
-            { name: "Cat", price: "₹500", img: "images/bagcharm/6.jpg", color: "White" },
-            { name: "Dog", price: "₹500", img: "images/bagcharm/7.jpg", color: "Red" },
+            { name: "Heart", price: "₹500", img: "Images/bagcharm/1.jpg", color: "Black" },
+            { name: "Tedy", price: "₹500", img: "Images/bagcharm/2.jpg", color: "Blue" },
+            { name: "Smiley", price: "₹500", img: "Images/bagcharm/3.jpg", color: "Grey" },
+            { name: "Sunflower", price: "₹500", img: "Images/bagcharm/4.jpg", color: "Pink" },
+            { name: "Evel Eye", price: "₹500", img: "Images/bagcharm/5.jpg", color: "Purple" },
+            { name: "Cat", price: "₹500", img: "Images/bagcharm/6.jpg", color: "White" },
+            { name: "Dog", price: "₹500", img: "Images/bagcharm/7.jpg", color: "Red" },
         ],
         // Add other products similarly
     };
