--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
 
     <!-- AirPods Pouch -->
     <div class="product-card" onclick="openProduct('airpods')">
-        <img src="images/airpods/main.jpg" alt="AirPods Pouch">
+        <img src="Images/airpods/main.jpg" alt="AirPods Pouch">
         <h3>AirPods Pouch</h3>
     </div>
 
     <!-- Laptop Bag -->
     <div class="product-card" onclick="openProduct('laptopbag')">
-        <img src="images/laptopbag/main.jpg" alt="Laptop Bag">
+        <img src="Images/laptopbag/main.jpg" alt="Laptop Bag">
         <h3>Laptop Bag</h3>
     </div>
 
     <!-- Bookmark -->
     <div class="product-card" onclick="openProduct('bookmark')">
-        <img src="images/bookmark/main.jpg" alt="Bookmark">
+        <img src="Images/bookmark/main.jpg" alt="Bookmark">
         <h3>Bookmark</h3>
     </div>
 
     <!-- Keychains -->
     <div class="product-card" onclick="openProduct('keychain')">
-        <img src="images/keychain/main.jpg" alt="Keychains">
+        <img src="Images/keychain/main.jpg" alt="Keychains">
         <h3>Keychains</h3>
     </div>
 
     <!-- Bag Charms -->
     <div class="product-card" onclick="openProduct('bagcharm')">
-        <img src="images/bagcharm/main.jpg" alt="Bag Charms">
+        <img src="Images/bagcharm/main.jpg" alt="Bag Charms">
         <h3>Bag Charms</h3>
     </div>
 
