--- a/tracking.html
+++ b/tracking.html
@@ -70,7 +70,7 @@
     document.getElementById("cphone").innerText = customer.phone;
     document.getElementById("caddress").innerText = customer.address;
     // Use the correct product image from order.img, fallback to airpods/1.jpg if missing
-    document.getElementById("track-img").src = order.img || "images/airpods/1.jpg";
+    document.getElementById("track-img").src = order.img || "Images/airpods/1.jpg";
     document.getElementById("track-img").alt = order.name;
 
     // Delivery date = today + 7 days
