fix the website for phone usage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LTS | Love To Surprise</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -41,11 +42,6 @@
         <div>🎁 Perfect for Gifting</div>
     </div>
 </section>
-
-
-
-
-<body>
 
 <!-- ====== PRODUCTS SECTION ====== -->
 <section class="products">
